project partialy done
